# TichuCPP

./: .gitignore  CMakeLists.txt  README.md  startClientsAndServer.bat
TichuClient/: CMakeLists.txt
TichuClient/src/: Client.cpp  main.cpp
TichuLib/: CMakeLists.txt
TichuLib/include/TichuLib/: Card.h  CardsPlayed.h  Game.h  OnTable.h  PlayTypes.h  Player.h  Utils.h  card.h
TichuLib/src/: Card.cpp  CardsPlayed.cpp  Game.cpp  OnTable.cpp  PlayTypes.cpp  Player.cpp  card.cpp
TichuLib/tests/: CMakeLists.txt  Test_Cards.cpp  Test_Namespace.cpp
TichuServer/: CMakeLists.txt
TichuServer/src/: Server.cpp
